--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -45,3 +45,7 @@
     <ol> 
         <li> Choose Avator </li>
         <li> Personal </li> </ol>
+        
+<h1>Example HTML Document with Ruby</h1>
+<p>Let's do some math</p>
+4 + 3 = <% 4+3 %>
