Define instance variables in Todo show action, and place in show view

--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,8 +1,8 @@
 <center><h1> My Tasks List </h1> <br> </center>
                  <a href="index.html">Home</a> <br>
   <h2><%= @todo_description %></h2>
-    <span class="pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> Pomodoros</span>
-  <a href="#" class="button" id="edit-todo-button">Edit</a>
-  <a href="#" class="button" id="delete-todo-button">Delete</a>
+    <span class="pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> Pomodoros</span> <br>
+  <a href="#" class="button" id="edit-todo-button">Edit</a> <br>
+  <a href="#" class="button" id="delete-todo-button">Delete</a> <br>
   <a href="index" class="simple-link">Go back...</a>
 </div>
