--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -3,6 +3,10 @@
   <h2><%= @todo_description %></h2>
     <span class="pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> Pomodoros</span> <br>
   <a href="#" class="button" id="edit-todo-button">Edit</a> <br>
+  <a href="#" class="button" id="delete-todo-button">Delete</a> 
+    <span class="pomodoro-difficulty large-pomodoro-difficulty"><%= @todo_pomodoro_difficulty %> Difficulty Level</span> <br>
+    <a href="#" class="button" id="edit-todo-button">Edit</a> <br>
   <a href="#" class="button" id="delete-todo-button">Delete</a> <br>
   <a href="index" class="simple-link">Go back...</a>
 </div>
+<h3>Todo #<%= params[:id] %></h3>
