Weekend 2 Day 1  Finish

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -4,7 +4,7 @@
             <li> Multiple Tabs: Tasks, Calendar, Shop, Summary, Community, Account, Settings
             <br> <img src="https://i.ytimg.com/vi/LiqY0F4gV2E/maxresdefault.jpg" width="400" alt="Momentum"> </ol>
 
-    <h1> <a href="show.html">My Tasks</a></a></h1>  
+    <h1> <a href="show/1">My Tasks</a></a></h1>  
         <ol> 
             <li> Write down Todos </li> 
                 <input type="text" placeholder="Write what you need to do!"> 
@@ -16,13 +16,13 @@
                 <input type="button" value="Create"
             <li> App calculates points you will receive from each task </li> </ol>
 
-    <h1> <a href="calendar.html">Calendar </h1>
+    <h1> <a href="show/2">Calendar </h1>
         <ol> 
             <li> Regular calendar format you are able to write on </li>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJHWox7V2ryrMPHb5c5Id-DjnSU3pMAepKDboy55pzNUv0YM41">
             <li> Pushes notifications </li> </ol>
 
-    <h1> <a href="community.html">Community </h1>
+    <h1> <a href="show/3">Community </h1>
         <ol> 
             <li> Uses forums system </li>
             <li> Easy access for whole school to use </li>
@@ -31,7 +31,7 @@
             <li> Chat system to solve HW (Discussion or Private) </li> 
             <li> Option to resolve post or keep it in the system if multiple have the same problem </li> </ol>
 
-    <h1> <a href="shop.html">Shop </h1>
+    <h1> <a href="show/4">Shop </h1>
         <ol> 
             <li> Options </li> 
         <ul> 
@@ -41,7 +41,7 @@
             <li> Tracks Points </li>
         </ol>
 
-    <h1> <a href="account.html">Account </h1>
+    <h1> <a href="show/5">Account </h1>
     <ol> 
         <li> Choose Avator </li>
         <li> Personal </li> </ol>
