--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,5 +1,5 @@
 <center><h1> My Tasks List </h1> <br> </center>
-                 <a href="index.html">Home</a> <br>
+                 <a href="/todo/index">Home</a> <br>
   <h2><%= @todo_description %></h2>
     <span class="pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> Pomodoros</span> <br>
   <a href="#" class="button" id="edit-todo-button">Edit</a> <br>
