--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,10 +1,7 @@
 <center><h1> My Tasks List </h1> <br> </center>
                  <a href="/todo/index">Home</a> <br>
-  <h2><%= @todo.description %></h2>
+<h2>Todo #<%= @todo.id %></h2>
+  <h3><%= @todo.description %></h3>
     <span class="pomodoro-estimate large-pomodoro-estimate"><%= @todo.pomodoro_estimate %> Pomodoros</span> <br>
   <a href="/todo/edit/<%= @todo.id %>" class="button edit-todo-button">Edit</a>
-  <a href="#" class="button" id="delete-todo-button">Delete</a> <br> <br>
-    <span class="pomodoro-difficulty large-pomodoro-difficulty"><%= @todo %> Difficulty Level</span> <br>
-  <a href="/todo/edit/<%= @todo.id %>" class="button edit-todo-button">Edit</a>
-</div>
-<h3>Todo #<%= @todo.id %></h3>
+  <a href="/todo/destroy/<%= @todo.id %>" class="button" id="delete-todo-button">Delete</a> <br> 
